fixing scrollbar and imgs proportion

--- a/Challenges/02 Refactoring Foodfy/public/style.css
+++ b/Challenges/02 Refactoring Foodfy/public/style.css
@@ -14,9 +14,10 @@ body {
     display: grid;
     grid-template-rows: 1fr auto;
     box-sizing: border-box;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     font-family: 'Roboto', sans-serif;
+    overflow-y: overlay;
 }
 
 
@@ -24,6 +25,7 @@ body {
     /* position: relative; */
     margin: 0 auto;
     width: 940px;
+    margin-bottom: 50px;
 }
 
 .navBar {
@@ -113,13 +115,13 @@ footer p {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 2;
     grid-gap: 20px;
-    margin-bottom: 50px;
 }
 
 .recipeCard img {
     width: 300px;
     height: 140px;
     border-radius: 15px;
+    object-fit: cover;
 }
 
 .recipeCard .recipeTitle {
@@ -132,6 +134,29 @@ footer p {
     font-size: 14px;
     line-height: 16px;
     color: #777;
+}
+
+/* === pag About ===*/
+
+.aboutHtml h1 {
+    margin: 50px 0 10px;
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: bold;
+    color: #111111;   
+}
+
+.aboutHtml h2 {
+    margin: 30px 0 20px;
+    font-size: 20px;
+    line-height: 24px;
+    color: #111111;       
+}
+
+.aboutHtml p {
+    font-size: 18px;
+    line-height: 28px;
+    color: #444;
 }
 
 /* pag Recipes */ 
